--- a/locksmith.html
+++ b/locksmith.html
@@ -1,42 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Lock smith</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="locksmith.css" />
     <script src="locksmith.js"  type="text/javascript"></script>
+
+    <title>Lock smith</title>
+    <link rel = "icon" href ="benelSecurity%20-logos_white.png" type = "image/x-icon">
 </head>
 <body>
 <div class="container-bar">
     <div id=logo1>
-        <img src="lock.jpg" height="60" width="100">
+        <img src="benelSecurity%20-logos.jpeg" height="60" width="100">
     </div>
-    <div id="license">
-        STATE CONTRACTOR LICENSE #xxxxxx
-        <div id="phone">
-            0545565765
-        </div>
-    </div>
+    <h2 style="margin-left: auto; color: #00aced; font-family: Serif">benel lock smoth</h2>
     <div id=logo2>
         <img src="247.jpg" height="60" width="100">
     </div>
 </div>
 
+
 <div class="btn-group" >
     <div id="borderButton">
-        <button class="button" id="0" >About us</button>
-        <button class="button" id="1" >Tips from locksmith</button>
-        <button class="button" id="2" >contact-us</button>
+        <button class="button" id="0" >HOME</button>
+        <button class="button" id="1" >About us</button>
+        <button class="button" id="2" >services</button>
         <button class="button" id="3" >Tips from locksmith</button>
+        <button class="button" id="4" >contact-us</button>
     </div>
+</div>
+
+<div class="contactWay">
+    <h2 style="color: white">give us a call &#128222;</h2>
+    <a style="color: aliceblue" href="tel:%054-556-5765"> 054-556-5765</a>
 </div>
 
 <div class="main" id="main"></div>
 
-<div class="creatorBy">
-    <p>creator by:Ben Nahum</p>
-    <!--    <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123 movies</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>-->
-    <p>© 2022 |benel Security And Locksmith Inc. | Terms Of Services | Privacy Policy</p>
+<div class="contactWay" >
+    <h1>Contact Us</h1>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <div class="wrapper">
+        <ul>
+            <li class="phone"><a href="tel:%054-556-5765"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a></li>
+            <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=545565765&text=Hi,%20I'm%20interested%20in%20your%20service" target="_blank" rel="noopener"><i class="fa fa-whatsapp fa-2x" aria-hidden="true" ></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/bennahum6" target="_blank" rel="noopener"><i class="fa fa-facebook fa-2x" aria-hidden="true" ></i></a></li>
+            <li class="instagram"><a href="https://www.instagram.com/ben_nahum/" target="_blank" rel="noopener"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+        </ul>
+    </div>
+    <br>
+    <div class="google">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13570.232515023703!2d35.200019!3d31.75526!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d7e936c56095%3A0x954755b0703a7e6c!2sKana&#39;ei%20ha-Galil%20St%2010%2C%20Jerusalem!5e0!3m2!1sen!2sil!4v1648929141190!5m2!1sen!2sil" width="600" height="150" style="border:10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </div>
+
+<div>
+    <div class="navigator-bar">
+        <button class="btn draw-border" id="0">Home</button>
+        <button class="btn draw-border" id="1">About Us</button>
+        <button class="btn draw-border" id="2">Services</button>
+        <button class="btn draw-border" id="3">tips From Lock smith</button>
+        <button class="btn draw-border" id="4">Contact Us</button>
+    </div>
+    <u style="margin-left: 19%">_____________________________________________________________________________________________________________</u>
+</div>
+
+<div class="whatWeDo">
+    <div id="whatWeDo-single">
+        <h4 style="margin-left: 10%; color: #dd4b39">Locksmiths:</h4>
+        <ul class="a">
+            <li>Bitting</li>
+            <li>Bolt Stump</li>
+            <li>Change Key</li>
+            <li>Key Code</li>
+            <li>Key Blank</li>
+            <li>Rekey</li>
+        </ul>
+    </div>
+    <div id="whatWeDo-single">
+        <h4 style="margin-left: 10%; color: #dd4b39">Services:</h4>
+        <ul class="a">
+            <li>Electronic Locks</li>
+            <li>All Keyless Locks</li>
+            <li>Digital Locks</li>
+            <li>Access Control Systems</li>
+            <li>Biometric Systems</li>
+            <li>Home Car or Business</li>
+        </ul>
+    </div>
+    <div id="whatWeDo-single">
+        <h4 style="margin-left: 10%; color: #dd4b39">Solutions:</h4>
+        <ul class="a">
+            <li>24 hour service</li>
+            <li>Installation and repair</li>
+            <li>Re-key</li>
+            <li>Master key systems</li>
+            <li>Same Day Service</li>
+            <li>Free Estimates</li>
+        </ul>
+    </div>
+    <div id="whatWeDo-single">
+        <h4 style="margin-left: 10%; color: #dd4b39">Locks:</h4>
+        <ul class="a">
+            <li>Door Locks</li>
+            <li>Padlocks and Keys</li>
+            <li>Window Locks and Keys</li>
+            <li>Transponder Keys</li>
+            <li>DND Keys</li>
+            <li>Magnetic Keys</li>
+        </ul>
+    </div>
+</div>
+
+
+
+<div class="creatorBy">
+    <a>Ben Nahum© Inc 2020 - 2022 |</a>
+    <div id="terms"><a target="_blank" > Terms Of Services |</a></div>
+    <div class="tooltip" id="policy"><a target="_blank"> Privacy Policy |</a></div>
+</div>
+
+
+
+
 </body>
 </html>
