--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="locksmith.css" />
-    <script src="locksmith.js"  type="text/javascript"></script>
+    <link rel="stylesheet" href="index.css" />
+    <script src="index.js" type="text/javascript"></script>
 
     <title>Lock smith</title>
-    <link rel = "icon" href ="benelSecurity%20-logos_white.png" type = "image/x-icon">
+    <link rel = "icon" href ="./image/benelSecurity%20-logos_white.png" type = "image/x-icon">
 </head>
 <body>
 <div class="container-bar">
     <div id=logo1>
-        <img src="benelSecurity%20-logos.jpeg" height="60" width="100">
+        <img src="./image/benelSecurity%20-logos.jpeg" height="60" width="100">
     </div>
     <h2 style="margin-left: auto; color: #00aced; font-family: Serif">benel lock smoth</h2>
     <div id=logo2>
-        <img src="247.jpg" height="60" width="100">
+        <img src="./image/247.jpg" height="60" width="100">
     </div>
 </div>
 
@@ -119,8 +119,6 @@
     <div id="terms"><a target="_blank" > Terms Of Services |</a></div>
     <div class="tooltip" id="policy"><a target="_blank"> Privacy Policy |</a></div>
 </div>
-
-
 
 
 </body>
