--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="index.css" />
-    <script src="index.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="./js/index.js" type="text/javascript"></script>
 
     <title>Lock smith</title>
     <link rel = "icon" href ="./image/benelSecurity%20-logos_white.png" type = "image/x-icon">
