--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css" />
     <script src="./js/index.js" type="text/javascript"></script>
 
@@ -10,16 +10,15 @@
     <link rel = "icon" href ="./image/benelSecurity%20-logos_white.png" type = "image/x-icon">
 </head>
 <body>
+
 <div class="container-bar">
     <div id=logo1>
-        <img src="./image/benelSecurity%20-logos.jpeg" height="60" width="100">
+        <img src="./image/benelSecurity%20-logos.jpeg" alt="Business-logo" style="height: 70%; width: 13%">
     </div>
-    <h2 style="margin-left: auto; color: #00aced; font-family: Serif">benel lock smoth</h2>
-    <div id=logo2>
-        <img src="./image/247.jpg" height="60" width="100">
+    <div class="title">
+        <h2 >benel lock smith</h2>
     </div>
 </div>
-
 
 <div class="btn-group" >
     <div id="borderButton">
@@ -33,7 +32,7 @@
 
 <div class="contactWay">
     <h2 style="color: white">give us a call &#128222;</h2>
-    <a style="color: aliceblue" href="tel:%054-556-5765"> 054-556-5765</a>
+    <a id="phone-num" style="color: aliceblue" href="tel:%054-556-5765"> 054-556-5765</a>
 </div>
 
 <div class="main" id="main"></div>
